src/index.css
* {
  font-family: 'Monserrat', sans-serif;
  font-weight: 400;
}
body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

.g-card {
  margin: 20px;
}

.g-card-img {
  border-radius: 10px;
  width: 300px;
  height: 480px;
  box-shadow: 0px 0px 3px 1px #ccf;
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  -o-border-radius: 10px;
}

.g-card-info {
  margin-top: 10px;
  min-height: 100px;
}

.g-card-title {
  font-size: 24px;
  margin: 0px;
}

.g-card-sub-title {
  font-size: 16px;
  margin: 0px;
}

.success-msg {
  color: #57A773;
  padding: 10px 15px;
}

.err-msg {
  color: #EE6352;
  padding: 10px 15px;
}

.contact {     
  display: inline-block;     
  position: relative;    
  z-index: 1;     
  padding: 2em;
  margin: -2em; 
  color: black
}

.contact:hover {
  color: #FF571B;
}

.icon {
  vertical-align: text-bottom;
  margin-right: 5px;
}

.vk-icon {
  vertical-align: bottom;
  display: inline-block;
  margin-right: 5px;
}

